Improve UI & fix missing handler
